--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
                 tabindex="1"
             >
                 <a
-                    href="#about"
+                    href="#About Us"
                     onclick="closeNavMenu()"
                     tabindex="1"
-                >About</a>
+                >About Us</a>
                 <a
                     href="#fleet"
                     onclick="closeNavMenu()"
