Update index.html (#14)
Changed the label from “Fleet” to “Our Sailboats”.

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                     tabindex="1"
                 >About Us</a>
                 <a
-                    href="#fleet"
+                    href="#Our Sailboats"
                     onclick="closeNavMenu()"
-                >Fleet</a>
+                >Our Sailboats</a>
                 <a
                     href="#sponsors"
                     onclick="closeNavMenu()"
