--- a/pages/about.html
+++ b/pages/about.html
@@ -11,7 +11,7 @@
         ></video>
         <section class="card-content-body">
             <div class="content-text">
-                <p>Blind Sailing Association of Canada (BSAC) is a charitable organization founded in 2002. Our motto is ‘Safety, Fun, and Learning!‘</p>
+                <p>Blind Sailing Association of Canada (BSAC) is a charitable organization founded in 2002. Our motto is <i>Safety, Fun, and Learning!</i></p>
                 <p>Our mission is to offer affordable recreational sailing opportunities to blind and visually impaired individuals in the Greater Toronto Area. To maximize safety, we include two experienced sighted volunteers on every sail outing. </p>
                 <p>Our blind members get very actively involved by helming our sailboats, trimming the sails, learning sailing theory, and – just as importantly – having fun socializing with crew and other members during and after the sail. BSAC has a number of sailing programs for all levels of interest, ranging from learning how to sail to learning to race. We sail 7 days a week from mid-May to mid-October.</p>
                 <div>
