--- a/pages/fleet.html
+++ b/pages/fleet.html
@@ -20,7 +20,7 @@
                         >
                     </a>
                     <p>22ft. Catalina</p>
-                    <p>“C-Breeze” is our 22-foot Catalina Capri which is a spunky, sporty, fun-sailing boat with a tiller. We use C-Breeze for racing. Many of our members also enjoy taking C-Breeze on recreational sails because the tiller allows them to better “feel” the movement of the water and how the boat responds to subtle movements of the tiller.</p>
+                    <p class="description">“C-Breeze” is our 22-foot Catalina Capri which is a spunky, sporty, fun-sailing boat with a tiller. We use C-Breeze for racing. Many of our members also enjoy taking C-Breeze on recreational sails because the tiller allows them to better “feel” the movement of the water and how the boat responds to subtle movements of the tiller.</p>
                 </div>
                 <div class="boat">
                     <label>Catch-The-Wind</label>
@@ -36,7 +36,7 @@
                         >
                     </a>
                     <p>27ft. Catalina</p>
-                    <p>“Catch The Wind” is our 27-foot Catalina. It is more of a cruising boat and has a wheel rather than a tiller. This boat has a few more amenities than C-Breeze, including a head (bathroom), a small galley (kitchen), an aft cabin (private sleeping quarters), and a salon (comfortable seating below deck), and even a barbecue. Because it is slightly larger and more comfortable, this boat is typically where our “dock parties” are held!</p>
+                    <p class="description">“Catch The Wind” is our 27-foot Catalina. It is more of a cruising boat and has a wheel rather than a tiller. This boat has a few more amenities than C-Breeze, including a head (bathroom), a small galley (kitchen), an aft cabin (private sleeping quarters), and a salon (comfortable seating below deck), and even a barbecue. Because it is slightly larger and more comfortable, this boat is typically where our “dock parties” are held!</p>
                 </div>
             
             </div>
