--- a/pages/pay-fees.html
+++ b/pages/pay-fees.html
@@ -32,12 +32,12 @@
                 <p>Thank you for making your payment online.</p>
                 <p>Please select from one of the options below:</p>
                 <ul>
-                    <li><a href="https://buy.stripe.com/fZe7tDcx6eno5C8dQQ">$50 Annual mebership fee</a></li>
-                    <li><a href="https://buy.stripe.com/eVaaFP1Sscfg6Gc001" title="Click to buy a single sail">$25 Single sail</a</li>
+                    <li><a href="https://dashboard.stripe.com/products/prod_QdJiWMNfuha0JC">$50 Annual mebership fee</a></li>
+                    <li><a href="https://dashboard.stripe.com/products/prod_QdJm4JxxKTBQh5" title="Click to buy a single sail">$25 Single sail</a</li>
                     <li><a href="https://buy.stripe.com/9AQ3dn40A7Z06Gc7su" title="Click to buy 10 sails page">$150 10 sails package</a></li>
-                    <li><a href="https://buy.stripe.com/8wM8xH68Ifrse8E7sA" title="Click to buy annual membership and 10 sails page">$250 Annual membership and 10 sails package</a></li>
-                    <li><a href="https://buy.stripe.com/3cs6pzdBa9341lSfZ5" title="Click to buy annual membership and unlimited sails package">$300 Annual membership and unlimited sails package</a></li>
-                    <li><a href="https://buy.stripe.com/3cs01bgNmfrs1lSbIM" title="Click to buy guest sail">$30 Guest sail fee</a></li>
+                    <li><a href="https://dashboard.stripe.com/products/prod_QdJg9UVhImVCf4" title="Click to buy annual membership and 10 sails page">$250 Annual membership and 10 sails package</a></li>
+                    <li><a href="https://dashboard.stripe.com/products/prod_QdJfRSryBoUgEu title="Click to buy annual membership and unlimited sails package">$300 Annual membership and unlimited sails package</a></li>
+                    <li><a href="https://dashboard.stripe.com/products/prod_QdJk8R2g1zfURv" title="Click to buy guest sail">$30 Guest sail fee</a></li>
                 </ul>
                 <p>You can also pay the fees via INTERAC e-Transfer to our finance email</p>
                 <p><a href="/pages/purchase-terms.html">Terms and conditions</a></p>
