--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
             href="/assets/images/favicon.ico"
             type="image/x-icon"
         >
+        <link
+          href="https://sails.blindsailing.ca/feed/upcoming_sails.rss"
+          type="application/rss+xml"
+          title="Upcoming sails"
+          rel="alternative"
+        >
         <script src="/js/accordion.js"></script>
         <script src="/js/up-down-scroller.js"></script>
         <script src="/js/pages.js"></script>
@@ -236,6 +242,7 @@
             <footer class="card bg-img bg-img-1">
                 <div class="card-content-container">
                     <p class="card-header">COPYRIGHT BLIND SAILING CANADA 2021</p>
+                    <a href="https://sails.blindsailing.ca/feed/upcoming_sails.rss" title="upcoming sails rss feed"><img atl="upcoming sails rss feed" src="/assets/rss.png"></a>
                 </div>
             </footer>
         </main>
