--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
                     href="#contact"
                     onclick="closeNavMenu()"
                 >Contact</a>
+                <a href="https://sails.blindsailing.ca/feed/upcoming_sails.rss" title="upcoming sails rss feed"><img atl="upcoming sails rss feed" src="/assets/rss.png">RSS Feed of upcoming sails</a>
                 <a href="https://sails.blindsailing.ca/login">Log in</a>
             </div>
         </nav>
